--- a/style.css
+++ b/style.css
@@ -15,6 +15,16 @@ body {
     height: auto;
   
   }
+  .card {
+    width: 400px;
+    height: auto;
+  
+  }
+  .card {
+    width: 400px;
+    height: auto;
+  
+  }
   .progress {
     
   }
