--- a/style.css
+++ b/style.css
@@ -13,9 +13,10 @@ body {
   .card {
     width: 400px;
     height: auto;
+    height: auto;
+    height: auto;
   
   }
-  .card
   .progress {
     
   }
