--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ body {
     height: auto;
     height: auto;
     height: auto;
+    height: auto;
+    height: auto;
+    height: auto;
   
   }
   .progress {
