--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
   .card {
     width: 400px;
     height: auto;
+    height: auto;
+    height: auto;
+    height: auto;
   
   }
   .progress {
