--- a/style.css
+++ b/style.css
@@ -9,14 +9,13 @@ body {
   
   .border {
     border: 1.5px solid #e2e2e2;
+    border: 1.5px solid #e2e2e2;
+    border: 1.5px solid #e2e2e2;
+    border: 1.5px solid #e2e2e2;
   }
   .card {
     width: 400px;
     height: auto;
-    height: auto;
-    height: auto;
-    height: auto;
-  
   }
   .progress {
     
