--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body {
   .border {
     border: 1.5px solid #e2e2e2;
     border: 1.5px solid #e2e2e2;
+    border: 1.5px solid #e2e2e2;
+    border: 1.5px solid #e2e2e2;
+    border: 1.5px solid #e2e2e2;
    
   }
   .card {
